[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
custom-utils = "0.10.15"
anyhow = "1.0.75"
tokio = {version = "1.32.0", features = ["full"]}
syn = {version = "2.0.29", features = ["full", "extra-traits"]}
async-recursion = "1.0.4"
regex = "1.10.2"